tests/paczka1/fuzzy1/97920285.err
Error in line 3: QdFgo1 S456 8,2
Error in line 24: AfiYMGBdi S456 8,9
Error in line 30: A70 A664 65,5
Error in line 35: veB2utJa S456 99,3
